# homework_intelligent_mobile_robot

./: README.md
devel/: .catkin  local_setup.sh
devel/lib/astar_path_planner/: astar_planner  obstacle_generator
devel/lib/pkgconfig/: astar_path_planner.pc
devel/share/astar_path_planner/cmake/: astar_path_plannerConfig.cmake
src/astar_path_planner/: CMakeLists.txt
src/astar_path_planner/include/: Trajectory.h
src/astar_path_planner/launch/: astar_planner.launch
src/astar_path_planner/rviz/: astar_path_planner.rviz
src/astar_path_planner/src/: Trajectory.cpp  astar_planner.cpp
